edition = "2023";

package cache.v1;

option go_package = "github.com/dynoinc/skyvault/gen/proto/cache/v1";
option features.field_presence = IMPLICIT;

import "google/protobuf/empty.proto";

service CacheService {
  rpc Get(GetRequest) returns (GetResponse) {}
}

message GetRequest {
  string object_path = 1;
  map<string, google.protobuf.Empty> keys = 2;
}

message GetResponse {
  map<string, bytes> found = 1;
  map<string, google.protobuf.Empty> deleted = 2;
}

